--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/logo/letter-t.png"/>
+  <link rel="icon" type="image/svg+xml" href="/src/assets/logo/letter-t.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
     body {
       background-color: #f5f4fc;
-      margin: 0; /* Reset default margin */
-      padding: 0; /* Reset default padding */
+      margin: 0;
+      /* Reset default margin */
+      padding: 0;
+      /* Reset default padding */
+    }
+
+    #loader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.548);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
     }
   </style>
   <title>Tanvir Hasan Tonmoy</title>
@@ -24,12 +39,58 @@
   <script>
     AOS.init();
   </script>
+
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
   </script>
   <script type="text/javascript">
     (function () {
-      emailjs.init("3cRhJ9Vi3yJG9q1B8");
+      emailjs.init("e9e24h7anMlSAzbU0");
     })();
+  </script>
+  <script>
+    var loaderTimeout;
+
+    document.addEventListener("DOMContentLoaded", function () {
+      // Display loader when the page loads
+      showLoader();
+
+      // Simulate a 5-second delay (you can replace this with actual page loading logic)
+      loaderTimeout = setTimeout(function () {
+        // Hide loader after 5 seconds
+        hideLoader();
+      }, 4000);
+    });
+
+    // Listen for beforeunload event to show loader on page reload
+    window.addEventListener("beforeunload", function () {
+      showLoader();
+    });
+
+    // Listen for popstate event to show loader when navigating between routes
+    window.addEventListener("popstate", function () {
+      showLoader();
+      clearTimeout(loaderTimeout);
+      loaderTimeout = setTimeout(function () {
+        // Hide loader after 5 seconds
+        hideLoader();
+      }, 4000);
+    });
+
+    function showLoader() {
+      // Create and append loader to the body
+      var loader = document.createElement("div");
+      loader.id = "loader";
+      loader.innerHTML = '<span class="loading loading-spinner loading-lg w-24 bg-gradient-to-r from-blue-500 to-[#cbf3819b] hover:gradient-hover focus:outline-none  focus:border-blue-300 font-semibold"></span>';
+      document.body.appendChild(loader);
+    }
+
+    function hideLoader() {
+      // Remove the loader from the DOM
+      var loader = document.getElementById("loader");
+      if (loader) {
+        loader.parentNode.removeChild(loader);
+      }
+    }
   </script>
 </body>
 
